tests/struct_field_defaults_union_bad.stderr
tests/struct_field_defaults_union_bad.sl:3:10: error: SL2004: type mismatch
