tests/struct_field_defaults_union_bad.sl
// Verifies struct field defaults union is rejected.
union U {
	a i32 = 1
}
